--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
 course.url=https://front.test.courses.ktsf.ru/
-course.user=INSERT VALUE
-course.password=INSERT VALUE
+course.user=ekarandasova@gmail.com
+course.password=i290!2dQPx
